--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <import type="android.view.View" />
         <variable
             name="viewModel"
             type="com.openclassrooms.realestatemanager.presentation.ui.MainViewModel" />
@@ -13,6 +13,9 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/list"
         android="http://schemas.android.com/apk/res/android"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="600dp"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
@@ -49,7 +52,8 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/house"
-                    android:checked="@{viewModel.house}"
+                    android:checked="@={viewModel.house}"
+                    android:onClick="@{(v)->viewModel.filterData()}"
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -57,7 +61,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/flat"
-                    android:checked="@{viewModel.flat}"
+                    android:checked="@={viewModel.flat}"
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -65,7 +69,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/duplex"
-                    android:checked="@{viewModel.duplex}"
+                    android:checked="@={viewModel.duplex}"
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -73,7 +77,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/penthouse"
-                    android:checked="@{viewModel.penthouse}"
+                    android:checked="@={viewModel.penthouse}"
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -81,7 +85,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/manor"
-                    android:checked="@{viewModel.manor}"
+                    android:checked="@={viewModel.manor}"
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -114,7 +118,8 @@
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="@{viewModel.house}"
+                    android:checked="@={viewModel.museum}"
+                    android:onClick="@{(v)->viewModel.filterData()}"
                     android:text="@string/museum" />
 
                 <com.google.android.material.chip.Chip
@@ -122,7 +127,7 @@
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="@{viewModel.flat}"
+                    android:checked="@={viewModel.schools}"
                     android:text="@string/schools" />
 
                 <com.google.android.material.chip.Chip
@@ -130,7 +135,7 @@
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="@{viewModel.duplex}"
+                    android:checked="@={viewModel.shops}"
                     android:text="@string/shops" />
 
                 <com.google.android.material.chip.Chip
@@ -138,7 +143,7 @@
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="@{viewModel.penthouse}"
+                    android:checked="@={viewModel.hospital}"
                     android:text="@string/hospital" />
 
                 <com.google.android.material.chip.Chip
@@ -146,7 +151,7 @@
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="@{viewModel.manor}"
+                    android:checked="@={viewModel.stations}"
                     android:text="@string/station" />
 
                 <com.google.android.material.chip.Chip
@@ -154,9 +159,15 @@
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="@{viewModel.manor}"
+                    android:checked="@={viewModel.park}"
                     android:text="@string/park" />
             </com.google.android.material.chip.ChipGroup>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nearbyChipGroup" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
