--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -180,6 +180,7 @@
                 android:stepSize="100000"
                 android:valueFrom="@{viewModel.minPrice}"
                 android:valueTo="@{viewModel.maxPrice}"
+                app:values="@{viewModel.priceArray}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/priceRangeText" />
 
