--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -200,17 +200,130 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:stepSize="10"
-                android:valueFrom="0"
-                android:valueTo="10000"
+                android:valueFrom="@{viewModel.minSurface}"
+                android:valueTo="@{viewModel.maxSurface}"
+                app:values="@{viewModel.surfaceArray}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/surfaceRangeText" />
+
+
+            <TextView
+                android:id="@+id/marketText"
+                style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="@dimen/marginTop"
+                android:layout_marginEnd="@dimen/marginEnd"
+                android:text="@string/on_market_since"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/surfaceRangeSlider" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/sellDateFilter"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                android:layout_width="@dimen/formWidth"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="@dimen/marginTop"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/marketText"
+                app:layout_goneMarginEnd="@dimen/marginEnd">
+
+                <AutoCompleteTextView
+                    android:id="@+id/sell_date_dropdown"
+                    textToDate="@{viewModel.sellDate}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/on_market_since"
+                    android:inputType="textAutoComplete"
+                    android:labelFor="@id/type_input_layout" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/soldText"
+                style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                isVisible="@{viewModel.sold}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="@dimen/marginTop"
+                android:layout_marginEnd="@dimen/marginEnd"
+                android:text="@string/sold_since"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/sellDateFilter" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/filterSoldText"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                isVisible="@{viewModel.sold}"
+                android:layout_width="@dimen/formWidth"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginEnd="@dimen/marginEnd"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/soldText"
+                app:layout_goneMarginEnd="@dimen/marginEnd">
+
+                <AutoCompleteTextView
+                    android:id="@+id/filterSoldDate"
+                    textToDate="@{ viewModel.soldDate}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/sold_date"
+                    android:inputType="textAutoComplete"
+                    android:labelFor="@id/sold_input_layout" />
+
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/switchSoldText"
+                style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="22dp"
+                android:text="@string/sold"
+                app:layout_constraintStart_toStartOf="@id/filterSoldSwitch"
+                app:layout_constraintTop_toBottomOf="@+id/filterSoldText" />
+
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/filterSoldSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:checked="@{viewModel.sold}"
+                app:layout_constraintStart_toEndOf="@id/areaTex"
+                app:layout_constraintTop_toBottomOf="@+id/switchSoldText" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/areaTex"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                android:layout_width="@dimen/formWidth"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+
+                android:hint="Select an area"
+                android:inputType="textAutoComplete"
+                android:labelFor="@id/agent_dropdown"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/switchSoldText"
+                app:layout_goneMarginEnd="@dimen/marginEnd">
+
+                <AutoCompleteTextView
+                    android:id="@+id/filterArea"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.area}" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/applyFilter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/apply"
-                app:layout_constraintTop_toBottomOf="@id/surfaceRangeSlider"
+                app:layout_constraintTop_toBottomOf="@id/areaTex"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
