--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -117,6 +117,7 @@
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="@{()->viewModel.filterData()}"
                     android:checked="@={viewModel.museum}"
                     android:text="@string/museum" />
 
@@ -125,6 +126,7 @@
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="@{()->viewModel.filterData()}"
                     android:checked="@={viewModel.schools}"
                     android:text="@string/schools" />
 
@@ -134,6 +136,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="@={viewModel.shops}"
+                    android:onClick="@{()->viewModel.filterData()}"
                     android:text="@string/shops" />
 
                 <com.google.android.material.chip.Chip
@@ -141,6 +144,7 @@
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="@{()->viewModel.filterData()}"
                     android:checked="@={viewModel.hospital}"
                     android:text="@string/hospital" />
 
@@ -149,6 +153,7 @@
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="@{()->viewModel.filterData()}"
                     android:checked="@={viewModel.stations}"
                     android:text="@string/station" />
 
