update MainViewModel.kt -> type filter is working
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -61,6 +61,7 @@
                 <com.google.android.material.chip.Chip
                     android:id="@+id/flat"
                     android:checked="@={viewModel.flat}"
+                    android:onClick="@{(v)->viewModel.filterData()}"
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -69,6 +70,7 @@
                 <com.google.android.material.chip.Chip
                     android:id="@+id/duplex"
                     android:checked="@={viewModel.duplex}"
+                    android:onClick="@{(v)->viewModel.filterData()}"
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -77,6 +79,7 @@
                 <com.google.android.material.chip.Chip
                     android:id="@+id/penthouse"
                     android:checked="@={viewModel.penthouse}"
+                    android:onClick="@{(v)->viewModel.filterData()}"
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -85,6 +88,7 @@
                 <com.google.android.material.chip.Chip
                     android:id="@+id/manor"
                     android:checked="@={viewModel.manor}"
+                    android:onClick="@{(v)->viewModel.filterData()}"
                     style="@style/Widget.MaterialComponents.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
