--- a/app/src/main/res/layout/map_layout.xml
+++ b/app/src/main/res/layout/map_layout.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
+    android:paddingBottom="55dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,11 +18,10 @@
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="60dp"
             map:cameraZoom="13"
             map:layout_constraintStart_toStartOf="parent"
             map:layout_constraintTop_toTopOf="parent"
-            tools:context="com.example.mapwithmarker.MapsMarkerActivity" />
+            tools:context="com.openclassrooms.realestatemanager.presentation.ui.property_map.MapFragment" />
 
         <ProgressBar
             android:id="@+id/map_progress_bar"
