--- a/app/src/main/res/layout-land/add_property_fragment.xml
+++ b/app/src/main/res/layout-land/add_property_fragment.xml
@@ -26,7 +26,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.ui.addProperty.AddPropertyFragment">
+        tools:context=".presentation.ui.addProperty.AddEditPropertyFragment">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
