--- a/app/src/main/res/layout/dates_layout.xml
+++ b/app/src/main/res/layout/dates_layout.xml
@@ -53,7 +53,7 @@
             style="@style/TextAppearance.MaterialComponents.Subtitle1"
             android:layout_width="wrap_content"
             android:layout_height="22dp"
-            android:visibility="@{viewModel.isNewProperty() ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.isNewProperty() ? View.GONE : View.VISIBLE}"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="22dp"
             android:text="@string/sold"
@@ -66,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="@={viewModel.sold}"
-            android:visibility="@{viewModel.isNewProperty() ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.isNewProperty() ? View.GONE : View.VISIBLE}"
             android:layout_marginStart="@dimen/marginStart"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/switch_title" />
@@ -90,7 +90,6 @@
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginEnd="@dimen/marginEnd"
             isVisible="@{viewModel.sold}"
-            android:visibility="@{viewModel.isNewProperty() ? View.VISIBLE : View.GONE}"
             app:layout_constraintStart_toEndOf="@id/sold_switch"
             app:layout_constraintTop_toBottomOf="@id/sold_title"
             app:layout_goneMarginEnd="@dimen/marginEnd">
