update  property_detail.xml -> add sold text and view if property_item_layout.xml sold
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/property_item_layout.xml
+++ b/app/src/main/res/layout/property_item_layout.xml
@@ -40,6 +40,7 @@
             android:padding="10dip"
             android:text="@{photo.name}"
             android:textColor="@color/grey_20"
+            android:textStyle="bold"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
