--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -174,6 +174,34 @@
                     app:layout_constraintTop_toBottomOf="@id/item_price" />
 
                 <TextView
+                    android:id="@+id/text_sold"
+                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                    isVisible="@{property.sold}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/marginEnd"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:text="@{@string/sold}"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toEndOf="@id/surface_text"
+                    app:layout_constraintTop_toBottomOf="@id/item_price" />
+
+                <TextView
+                    android:id="@+id/sold_date"
+                    dateToText="@{property.soldDate}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/marginEnd"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:visibility="@{property.sold ? View.VISIBLE : View.GONE }"
+                    app:layout_constraintStart_toEndOf="@id/text_sold"
+                    app:layout_constraintTop_toBottomOf="@id/item_price" />
+
+                <TextView
                     android:id="@+id/rooms_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
