update  property_detail.xml agent picture
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -381,16 +381,17 @@
                     android:text="@string/agent"
                     app:drawableStartCompat="@drawable/ic_baseline_account_circle_24"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@id/agentImage"
                     app:layout_constraintTop_toBottomOf="@id/onMarketSince_text" />
 
                 <ImageView
                     android:id="@+id/agentImage"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
                     android:paddingStart="@dimen/marginEnd"
                     android:paddingTop="8dp"
                     android:paddingEnd="@dimen/marginEnd"
-                    app:imagePath="@{agent.photoUrl}"
+                    app:imageCirclePath="@{agent.photoUrl}"
                     app:layout_constraintStart_toEndOf="@id/agentInChargeText"
                     app:layout_constraintTop_toBottomOf="@id/onMarketSince_text" />
 
@@ -404,6 +405,7 @@
                     android:paddingEnd="@dimen/marginEnd"
                     android:text="@{agent.name}"
                     app:layout_constraintStart_toEndOf="@id/agentImage"
+                    app:layout_constraintBottom_toBottomOf="@id/agentImage"
                     app:layout_constraintTop_toBottomOf="@id/onMarketSince_text" />
 
                 <TextView
@@ -416,7 +418,7 @@
                     android:paddingEnd="@dimen/marginEnd"
                     android:text="@string/location"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/agentText" />
+                    app:layout_constraintTop_toBottomOf="@id/agentImage" />
 
                 <com.google.android.gms.maps.MapView
                     android:id="@+id/lite_map_view"
