--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -311,7 +311,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/marginStart"
-                android:checked="@{viewModel.sold}"
+                android:checked="@={viewModel.sold}"
                 android:onClick="@{(v)->viewModel.filterData()}"
                 app:layout_constraintStart_toEndOf="@id/areaTex"
                 app:layout_constraintTop_toBottomOf="@+id/switchSoldText" />
@@ -333,7 +333,7 @@
                     android:id="@+id/filterArea"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{viewModel.area}" />
+                    android:text="@={viewModel.area}" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
