--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -226,6 +226,66 @@
                 app:layout_constraintTop_toBottomOf="@id/surfaceRangeText"
                 app:values="@{viewModel.surfaceArray}" />
 
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/number_of_bedroom_text_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="@dimen/marginTop"
+                android:layout_marginEnd="@dimen/marginEnd"
+                android:layout_marginBottom="@dimen/marginTop"
+                android:layout_weight="0.5"
+                android:hint="@string/bedrooms"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/colorAccent"
+                app:layout_constraintEnd_toStartOf="@id/bathroomsLayout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/surfaceRangeSlider">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/number_of_bedroom_text_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:text="@={ viewModel.bedroomNumber }"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/textSize"
+                    app:drawableStartCompat="@drawable/ic_bedroom_parent_24dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/bathroomsLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marginStart"
+                android:layout_marginTop="@dimen/marginTop"
+                android:layout_marginEnd="@dimen/marginEnd"
+                android:layout_marginBottom="@dimen/marginTop"
+                android:layout_weight="0.5"
+                android:hint="@string/bathroom"
+                android:inputType="number"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/colorAccent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/number_of_bedroom_text_layout"
+                app:layout_constraintTop_toBottomOf="@id/surfaceRangeSlider">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/number_of_bathroom_text_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:inputType="number"
+                    android:text="@={viewModel.bathroomNumber }"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/textSize"
+                    app:drawableStartCompat="@drawable/ic_bathroom_24dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
             <TextView
                 android:id="@+id/marketText"
                 style="@style/TextAppearance.MaterialComponents.Subtitle1"
@@ -236,7 +296,7 @@
                 android:layout_marginEnd="@dimen/marginEnd"
                 android:text="@string/on_market_since"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/surfaceRangeSlider" />
+                app:layout_constraintTop_toBottomOf="@id/bathroomsLayout" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/sellDateFilter"
@@ -324,7 +384,7 @@
                 android:layout_marginStart="@dimen/marginStart"
                 android:hint="@string/select_an_area"
                 android:inputType="textAutoComplete"
-                android:labelFor="@id/agent_dropdown"
+                android:labelFor="@id/filterArea"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/switchSoldText"
                 app:layout_goneMarginEnd="@dimen/marginEnd">
